--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Implement của phần thông tin người dùng
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
 }
