--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+    implementation "androidx.cardview:cardview:1.0.0"
 }
