--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,18 @@
         android:theme="@style/Theme.MovieApp"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.MyListActivity"
-            android:exported="true" >
+            android:name=".ui.MoviePlayerActivity"
+            android:screenOrientation="landscape"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.MyListActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".ui.MovieDetailActivity"
             android:exported="true" />
@@ -23,19 +32,13 @@
             android:name=".ui.MainActivity"
             android:exported="true">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
