--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,28 +6,32 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MovieApp">
+        android:theme="@style/Theme.MovieApp"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.SearchActivity"
+            android:exported="true" >
+
+
+        </activity>
         <activity
             android:name=".ui.MoviePlayerActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.MyListActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.MovieDetailActivity"
             android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,10 +40,10 @@
         </activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
