update layout land

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.SearchActivity"
-            android:exported="true" >
-
+            android:exported="true">
         </activity>
         <activity
             android:name=".ui.MoviePlayerActivity"
@@ -42,10 +41,12 @@
         </activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
